--- a/frontend_web/astro/src/Pages/HomePage/HomePage.module.css
+++ b/frontend_web/astro/src/Pages/HomePage/HomePage.module.css
@@ -82,7 +82,7 @@ body {
     padding: 2rem;
     border-radius: 10px;
     background-image: linear-gradient(160deg, #000000 0%, #653895 100%);
-    height: 100vh;
+    /* height: 100vh; */
     /* min-height: 100%; */
     margin-bottom: 0px; /* Space for now playing bar */
     margin-left: 240px; /* Space for fixed sidebar */
